--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" type="text/css" href="build/index-build.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+
     <script src="build/index-build.js"></script>
   </head>
 
