trying setting things around

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <head>
     <meta charset="UTF-8">
 
+    <link rel="stylesheet" type="text/css" href="build/vendors-index-build.css">
     <link rel="stylesheet" type="text/css" href="build/index-build.css">
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
+    <script src="build/vendors-index-build.js"></script>
     <script src="build/index-build.js"></script>
   </head>
 
