--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="build/vendors-index-build.css">
     <link rel="stylesheet" type="text/css" href="build/index-build.css">
+    <link rel="icon" href="icon.png">
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
